add-main-and-firstsec

--- a/img/index.html
+++ b/img/index.html
@@ -37,9 +37,61 @@
                 <div class="bottom">
                     <p><a href="#"><i class="far fa-arrow-alt-circle-down"></i><span>Installa app</span></a></p>
                     <hr>
-                    <p><img class="profile" src="img/profile.svg" alt=""><span></span></p>
+                    <p><img class="profile" src="img/profile.svg" alt=""><span> Francesco Cernuto</span></p>
                 </div>
             </div>
+
+              <!-- Main page -->
+              <div class="page relative">
+                <div class="header-button fixed">
+                    <div class="button"><a class="a-button" href="#">effettua l'upgrade</a></div>
+                </div>
+                <div class="header">
+                    <span><a href="#">in evidenza</a><div class="green-underline"></div></span>
+                    <span><a href="#">podcast</a></span>
+                    <span><a href="#">classifiche</a></span>
+                    <span><a href="#">generi e mood</a></span>
+                    <span><a href="#">nuove uscite</a></span>
+                    <span><a href="#">scopri</a></span>
+                </div>
+
+                 <!-- First Sect  -->
+                 <div class="container">
+                    <h2 class="m-b15px">Recently Played</h2>
+                    <div class="row first-row">
+                        <div class="song fl">
+                            <img src="img/metal_lifting.jpg" alt="">
+                            <h6>Heavy Metal</h6>
+                            <p>Subtitle</p>
+                        </div>
+                        <div class="song fl">
+                            <img src="img/stranger.jpeg" alt="">
+                            <h6>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h6>
+                            <p>Kyle Dixon & Micheal Stein</p>
+                        </div>
+                        <div class="song fl">
+                            <img src="img/aquietplace.jpeg" alt="">
+                            <h6>A quiet place</h6>
+                            <p>Subtitle</p>
+                        </div>
+                        <div class="song fl">
+                            <img src="img/split.jpeg" alt="">
+                            <h6>Split</h6>
+                            <p>Subtitle</p>
+                        </div>
+                        <div class="song fl">
+                            <img src="img/cure.jpeg" alt="">
+                            <h6>A cure for wellness</h6>
+                            <p>Subtitle</p>
+                        </div>
+                        <div class="song fl">
+                            <img src="img/sinister.jpeg" alt="">
+                            <h6>Sinister</h6>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                </div>
+
 
     
 </body>
