--- a/index.html
+++ b/index.html
@@ -92,6 +92,72 @@
                     </div>
                 </div>
 
+                <!-- Second Sect -->
+                <div class="container">
+                    <h2 class="m-b15px">Creato per Francesco Cernuto</h2>
+                    <p class="m-b15px">Più ascolti, più saranno i suggerimenti.</p>
+                    <div class="row second-row">
+                        <div class="song fl">
+                            <img src="img/radar.jpeg" alt="">
+                            <h6>Release Radar</h6>
+                        </div>
+                        <div class="song fl">
+                            <img src="img/mixdaily.jpeg" alt="">
+                            <h6>Daily Mix 1</h6>
+                        </div>
+                    </div>
+                </div>
+
+                 <!--Third Sect -->
+                <div class="container">
+                    <h2 class="m-b15px">Artisti più popolari</h2>
+                    <p class="m-b15px">Più ascolti, più saranno i suggerimenti.</p>
+                    <div class="row third-row">
+                        <div class="song fl">
+                            <img class="circle" src="img/youg.jpeg" alt="">
+                        </div>
+                        <div class="song fl">
+                            <img class="circle" src="img/einaudi.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        
+        <footer>
+            <div class="left">
+                <img class="song" src="img/sinister.jpeg" alt="">
+                <div class="text"> 
+                    <h4>Sinister</h4>
+                    <p><a href="#">Brano Nome</a></p>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="far fa-heart"></i></a>
+                    <a href="#"><i class="far fa-folder"></i></a>
+                </div>
+            </div>
+            <div class="center">
+                <div class="top">
+                    <i class="fas fa-random"></i>
+                    <i class="fas fa-step-backward"></i>
+                    <a href="#"><i class="far fa-play-circle"></i></a>
+                    <i class="fas fa-step-forward"></i>
+                    <i class="fas fa-redo"></i>
+                </div>
+                <div class="bottom">
+                    <span>0:25</span><input type="range" name="time" id="range"><span>4:23</span>
+                </div>
+            </div>
+            <div class="right">
+                <i class="fas fa-list"></i>
+                <i class="fas fa-desktop"></i>
+                <i class="fas fa-volume-up"></i>
+                <input type="range" name="range" id="volume">
+            </div>
+        </footer>
+    </div>
+
+
 
     
 </body>
